Update Quarkus to version 3.25.3 and fix Java compatibility
Co-authored-by: amusarra <708110+amusarra@users.noreply.github.com>